--- a/demo.html
+++ b/demo.html
@@ -118,12 +118,12 @@
                 <section class="px-5 py-4 text-center">
                     <!-- <video id="videoPlayer" class="d-none" width="720" controls>
           </video> -->
-                    <div class="row">
-                        <div class="col-6">
+                    <div class="row justify-content-center align-items-center text-center">
+                        <!-- <div class="col-6">
                             <video id="videoPlayer-src" class="video-js vjs-default-skin vjs-4-3 d-none" controls autoplay
                                 preload="auto">
                             </video>
-                        </div>
+                        </div> -->
                         <div class="col-6">
                             <video id="videoPlayer-res" class="video-js vjs-default-skin vjs-4-3 d-none" controls autoplay
                                 preload="auto">
