add config file

--- a/demo.html
+++ b/demo.html
@@ -195,6 +195,7 @@
     </p>
 
     <script src="./js/index.js"></script>
+    <script src="./js/config.js"></script>
     <script src="./js/demo.js"></script>
     <!-- <script src="../js/modal.min.js"></script> -->
 </body>
