--- a/demo.html
+++ b/demo.html
@@ -53,9 +53,12 @@
             <header class="header">
                 <a href="#" class="header__icon" id="header__icon" onclick="onMenu()"></a>
                 <!-- if center logo => d-flex justify-content-center -->
-                <div><a href="../index.html" class="header__logo pt-2">
-                        <img src="./image/logo.svg" alt="" srcset="">
-                    </a></div>
+                <div class="header__logo pt-3">
+                        <img src="./image/logo.png" alt="" srcset="">
+                    <a href="../index.html">
+                        <!-- <img src="./image/logo.png" alt="" srcset=""> -->
+                    </a>
+                </div>
                 <div class="justify-content-center align-items-center text-right pt-3">
                     <!-- Dropdown -->
                     <div class="nav-item dropdown" id="toggle" expanded="true" style="display:inline-block">
