--- a/demo2.html
+++ b/demo2.html
@@ -26,6 +26,7 @@
   <link rel="stylesheet" href="./css/videoLandmark.css">
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="//vjs.zencdn.net/7.3.0/video.min.js"></script>
+  <link rel="stylesheet" href="./css/recorder.css">
 
 </head>
 
@@ -128,16 +129,16 @@
               <section>
                 <ul class="nav nav-tabs" role="tablist">
                   <li class="nav-item">
-                    <a class="nav-link active" id="0" href="#" data-toggle="tab" role="tab"
-                      aria-controls="Browse File" aria-selected="false" onclick="selectMethod(id)" >Browse File</a>
+                    <a class="nav-link active" id="0" href="#" data-toggle="tab" role="tab" aria-controls="Browse File"
+                      aria-selected="false" onclick="selectMethod(id)">Browse File</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" id="1" href="#" data-toggle="tab" role="tab"
-                      aria-controls="Webcam Record" aria-selected="true" onclick="selectMethod(id)">Webcam Record</a>
+                    <a class="nav-link" id="1" href="#" data-toggle="tab" role="tab" aria-controls="Webcam Record"
+                      aria-selected="true" onclick="selectMethod(id)">Webcam Record</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" id="2" href="#" data-toggle="tab" role="tab"
-                      aria-controls="Realtime" aria-selected="false" onclick="call()">Realtime</a>
+                    <a class="nav-link" id="2" href="#" data-toggle="tab" role="tab" aria-controls="Realtime"
+                      aria-selected="false" onclick="call()">Realtime</a>
                   </li>
                 </ul>
                 <div class="tab-content" id="myTabContent">
@@ -145,7 +146,7 @@
                                     <div class="tab-pane fade show active" id="profile" role="tabpanel" aria-labelledby="profile-tab">...2</div>
                                     <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...3</div> -->
                   <!-- Browse File Upload -->
-                  <div class="tab-pane fade show active" style="width: 300px;" id="browseFile">
+                  <div class="tab-pane fade " style="width: 300px;" id="browseFile">
                     <label class="label">Transfer Video</label>
                     <label for="file" class="input input-file">
                       <div class="button"><input type="file" id="videoFile" accept="video/*"
@@ -154,13 +155,34 @@
                     </label>
                   </div>
                   <!-- Webcam Record Upload -->
-                  <div class="tab-pane fade" style="max-width: 300px" id="webcamRecord">
-                    vxcvx
+                  <div class="tab-pane fade show active" id="webcamRecord">
+                      <div class="row justify-content-center align-items-center text-center">
+                          <div class="col-6">
+                            <div id="startButton" class="btnRecord">
+                              Start
+                            </div>
+                            <h5>Preview</h5>
+                            <video id="preview" width="256" height="256" autoplay muted></video>
+                          </div>
+                          <div class="col-6">
+                            <div id="stopButton" class="btnRecord">
+                              Stop
+                            </div>
+                            <h5>Recording</h5>
+                            <video id="recording" width="256" height="256" controls></video>
+                          </div>
+                        </div>
+                        <a id="downloadButton" class="btnRecord">
+                          Download
+                        </a>
+                        <div>
+                          <pre id="log"></pre>
+                        </div>
                   </div>
                   <!-- Realtime -->
                   <div class="tab-pane fade" style="max-width: 300px" id="realtime">
-                      Realtime
-                    </div>
+                    Realtime
+                  </div>
                 </div>
               </section>
             </fieldset>
@@ -221,6 +243,7 @@
   <script src="./js/config.js"></script>
   <script src="./js/demo.js"></script>
   <script src="./js/demo2.js"></script>
+  <script src="./js/recorder.js"></script>
 
   <!-- <script src="../js/modal.min.js"></script> -->
 </body>
