add recorder aline

--- a/demo2.html
+++ b/demo2.html
@@ -162,6 +162,9 @@
                               Start
                             </div>
                             <h5>Preview</h5>
+                            <div class="object">
+                                臉部對準框線 
+                            </div>
                             <video id="preview" width="256" height="256" autoplay muted></video>
                           </div>
                           <div class="col-6">
