--- a/demo.html
+++ b/demo.html
@@ -157,7 +157,7 @@
                   <!-- Webcam Record Upload -->
                   <div class="tab-pane fade" id="webcamRecord">
                       <div class="row justify-content-center align-items-center text-center">
-                          <div class="col-6">
+                          <div class="col-lg-6 col-md-12 col-sm-12">
                             <div id="startButton" class="btnRecord">
                               Start
                             </div>
@@ -167,7 +167,7 @@
                             </div>
                             <video id="preview" width="256" height="256" autoplay muted></video>
                           </div>
-                          <div class="col-6">
+                          <div class="col-lg-6 col-md-12 col-sm-12">
                             <div id="stopButton" class="btnRecord">
                               Stop
                             </div>
