--- a/demo.html
+++ b/demo.html
@@ -80,7 +80,7 @@
           </div>
         </div>
         <nav class="menu">
-          <div class="item">
+          <!-- <div class="item">
             <a href="../index.html"><i class="far fa-address-card"></i> Home</a>
           </div>
           <div class="item">
@@ -91,7 +91,7 @@
           </div>
           <div class="item">
             <a href="../detail.html"><i class="far fa-address-card"></i> Detail</a>
-          </div>
+          </div> -->
         </nav>
       </header>
 
