--- a/demo.html
+++ b/demo.html
@@ -113,7 +113,7 @@
                 </label>
               </section>
               <!-- Select upload method -->
-              <section>
+              <!-- <section>
                 <label class="label">Device</label>
                 <div class="inline-group" id="upload_group">
                   <label class="radio">
@@ -122,7 +122,7 @@
                   <label class="radio">
                     <input type="radio" name="radio_upload" value="Webcam Record" checked/><i></i>GPU</label>
                 </div>
-              </section>
+              </section> -->
             </fieldset>
             <fieldset class="upload-method">
               <label class="label ml-4">Upload Method</label>
