add control webcam func

--- a/demo.html
+++ b/demo.html
@@ -146,7 +146,7 @@
                                     <div class="tab-pane fade show active" id="profile" role="tabpanel" aria-labelledby="profile-tab">...2</div>
                                     <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...3</div> -->
                   <!-- Browse File Upload -->
-                  <div class="tab-pane fade " style="width: 300px;" id="browseFile">
+                  <div class="tab-pane fade show active" style="width: 300px;" id="browseFile">
                     <label class="label">Transfer Video</label>
                     <label for="file" class="input input-file">
                       <div class="button"><input type="file" id="videoFile" accept="video/*"
@@ -155,7 +155,7 @@
                     </label>
                   </div>
                   <!-- Webcam Record Upload -->
-                  <div class="tab-pane fade show active" id="webcamRecord">
+                  <div class="tab-pane fade " id="webcamRecord">
                       <div class="row justify-content-center align-items-center text-center">
                           <div class="col-lg-6 col-md-12 col-sm-12">
                             <div id="startButton" class="btnRecord">
