add download record video

--- a/demo.html
+++ b/demo.html
@@ -175,9 +175,9 @@
                             <video id="recording" width="256" height="256" controls></video>
                           </div>
                         </div>
-                        <!-- <a id="downloadButton" class="btnRecord">
+                        <a id="downloadButton" class="btnRecord">
                           Download
-                        </a> -->
+                        </a>
                         <div>
                           <pre id="log"></pre>
                         </div>
