remove banner function

--- a/demo.html
+++ b/demo.html
@@ -52,17 +52,17 @@
     <div class="site-pusher">
       <!-- Navigation bar -->
       <header class="header">
-        <a href="#" class="header__icon" id="header__icon" onclick="onMenu()"></a>
+        <!-- <a href="#" class="header__icon" id="header__icon" onclick="onMenu()"></a> -->
         <!-- if center logo => d-flex justify-content-center -->
-        <div class="header__logo pt-3">
+        <div class="header__logo p-3">
           <img src="./image/logo.png" alt="" srcset="">
           <a href="../index.html">
             <!-- <img src="./image/logo.png" alt="" srcset=""> -->
           </a>
         </div>
-        <div class="justify-content-center align-items-center text-right pt-3">
+        <!-- <div class="justify-content-center align-items-center text-right pt-3"> -->
           <!-- Dropdown -->
-          <div class="nav-item dropdown" id="toggle" expanded="true" style="display:inline-block">
+          <!-- <div class="nav-item dropdown" id="toggle" expanded="true" style="display:inline-block">
             <a class="nav-link p-0 px-4" href="#" id="navbardrop" data-toggle="dropdown">
               <span><img class="user mx-2" src="./image/user.jpg" alt="" srcset=""></span>
               <i class="fas fa-chevron-down"></i>
@@ -79,7 +79,7 @@
             </div>
           </div>
         </div>
-        <nav class="menu">
+        <nav class="menu"> -->
           <!-- <div class="item">
             <a href="../index.html"><i class="far fa-address-card"></i> Home</a>
           </div>
@@ -91,8 +91,8 @@
           </div>
           <div class="item">
             <a href="../detail.html"><i class="far fa-address-card"></i> Detail</a>
-          </div> -->
-        </nav>
+          </div> 
+        </nav>-->
       </header>
 
       <!-- Context 內容 -->
