modify to radio select

--- a/demo.html
+++ b/demo.html
@@ -103,7 +103,7 @@
             <!-- Data upload -->
             <fieldset>
               <!-- Choose model -->
-              <section>
+              <!-- <section>
                 <label class="label">Model</label>
                 <label class="select">
                   <select id="select_model" required>
@@ -111,18 +111,45 @@
                   </select>
                   <i></i>
                 </label>
-              </section>
+              </section> -->
               <!-- Select upload method -->
-              <!-- <section>
+              <section>
                 <label class="label">Device</label>
                 <div class="inline-group" id="upload_group">
-                  <label class="radio">
-                    <input type="radio" name="radio_upload" value="Browse File"  required/><i></i>CPU
-                  </label>
-                  <label class="radio">
-                    <input type="radio" name="radio_upload" value="Webcam Record" checked/><i></i>GPU</label>
+                  <div class="row">
+                    <div class="col-sm-4 col-md-3 col-lg-2">
+                      <label class="radio">
+                        <input type="radio" name="radio_upload" value="Browse File"  required/><i></i>陳昇瑋
+                      </label>
+                      <img src="https://i.imgur.com/HGvzFG1.png" alt="" srcset="">
+                    </div>
+                    <div class="col-sm-4 col-md-3 col-lg-2">
+                      <label class="radio">
+                        <input type="radio" name="radio_upload" value="Webcam Record" checked/><i></i>韓國瑜
+                      </label>
+                      <img src="https://i.imgur.com/j39NCtH.png" alt="">
+                    </div>
+                    <div class="col-sm-4 col-md-3 col-lg-2">
+                      <label class="radio">
+                        <input type="radio" name="radio_upload" value="Webcam Record" checked/><i></i>蔡英文
+                      </label>
+                      <img src="https://i.imgur.com/9D7IIFU.png" alt="">
+                    </div>
+                    <div class="col-sm-4 col-md-3 col-lg-2">
+                      <label class="radio">
+                        <input type="radio" name="radio_upload" value="Webcam Record" checked/><i></i>孫中山
+                      </label>
+                      <img src="https://i.imgur.com/5GgSWlw.png" alt="">
+                    </div>
+                    <div class="col-sm-4 col-md-3 col-lg-2">
+                      <label class="radio">
+                        <input type="radio" name="radio_upload" value="Webcam Record" checked/><i></i>克勞德
+                      </label>
+                      <img src="https://i.imgur.com/aWt7dfk.png" alt="">
+                    </div>
+                  </div>
                 </div>
-              </section> -->
+              </section>
             </fieldset>
             <fieldset class="upload-method">
               <label class="label ml-4">Upload Method</label>
