select target change radio input

--- a/demo.html
+++ b/demo.html
@@ -114,36 +114,36 @@
               </section> -->
               <!-- Select upload method -->
               <section>
-                <label class="label">Device</label>
-                <div class="inline-group" id="upload_group">
+                <label class="label">Target</label>
+                <div class="inline-group" id="model_group">
                   <div class="row">
                     <div class="col-sm-4 col-md-3 col-lg-2">
                       <label class="radio">
-                        <input type="radio" name="radio_upload" value="Browse File"  required/><i></i>陳昇瑋
+                        <input type="radio" name="radio_model" value=0 checked required/><i></i>陳昇瑋
                       </label>
                       <img src="https://i.imgur.com/HGvzFG1.png" alt="" srcset="">
                     </div>
                     <div class="col-sm-4 col-md-3 col-lg-2">
                       <label class="radio">
-                        <input type="radio" name="radio_upload" value="Webcam Record" checked/><i></i>韓國瑜
+                        <input type="radio" name="radio_model" value=1 /><i></i>韓國瑜
                       </label>
                       <img src="https://i.imgur.com/j39NCtH.png" alt="">
                     </div>
                     <div class="col-sm-4 col-md-3 col-lg-2">
                       <label class="radio">
-                        <input type="radio" name="radio_upload" value="Webcam Record" checked/><i></i>蔡英文
+                        <input type="radio" name="radio_model" value=2 /><i></i>蔡英文
                       </label>
                       <img src="https://i.imgur.com/9D7IIFU.png" alt="">
                     </div>
                     <div class="col-sm-4 col-md-3 col-lg-2">
                       <label class="radio">
-                        <input type="radio" name="radio_upload" value="Webcam Record" checked/><i></i>孫中山
+                        <input type="radio" name="radio_model" value=3 /><i></i>孫中山
                       </label>
                       <img src="https://i.imgur.com/5GgSWlw.png" alt="">
                     </div>
                     <div class="col-sm-4 col-md-3 col-lg-2">
                       <label class="radio">
-                        <input type="radio" name="radio_upload" value="Webcam Record" checked/><i></i>克勞德
+                        <input type="radio" name="radio_model" value=4 /><i></i>克勞德
                       </label>
                       <img src="https://i.imgur.com/aWt7dfk.png" alt="">
                     </div>
