--- a/demo.html
+++ b/demo.html
@@ -147,6 +147,18 @@
                       </label>
                       <img src="https://i.imgur.com/aWt7dfk.png" alt="">
                     </div>
+                    <div class="col-sm-4 col-md-3 col-lg-2">
+                      <label class="radio">
+                        <input type="radio" name="radio_model" value=5 /><i></i>艾麗絲
+                      </label>
+                      <img src="https://i.imgur.com/PGep2xN.png" alt="">
+                    </div>
+                    <div class="col-sm-4 col-md-3 col-lg-2">
+                      <label class="radio">
+                        <input type="radio" name="radio_model" value=6 /><i></i>蒂法
+                      </label>
+                      <img src="https://i.imgur.com/Xk6jCM6.png" alt="">
+                    </div>
                   </div>
                 </div>
               </section>
