--- a/demo.html
+++ b/demo.html
@@ -117,45 +117,45 @@
                 <label class="label">Target</label>
                 <div class="inline-group" id="model_group">
                   <div class="row">
-                    <div class="col-sm-4 col-md-3 col-lg-2">
+                    <div class="col-sm-4 col-md-3 col-lg-2 mt-2">
                       <label class="radio">
                         <input type="radio" name="radio_model" value=0 checked required/><i></i>陳昇瑋
                       </label>
                       <img src="https://i.imgur.com/HGvzFG1.png" alt="" srcset="">
                     </div>
-                    <div class="col-sm-4 col-md-3 col-lg-2">
+                    <div class="col-sm-4 col-md-3 col-lg-2 mt-2">
                       <label class="radio">
                         <input type="radio" name="radio_model" value=1 /><i></i>韓國瑜
                       </label>
                       <img src="https://i.imgur.com/j39NCtH.png" alt="">
                     </div>
-                    <div class="col-sm-4 col-md-3 col-lg-2">
+                    <div class="col-sm-4 col-md-3 col-lg-2 mt-2">
                       <label class="radio">
                         <input type="radio" name="radio_model" value=2 /><i></i>蔡英文
                       </label>
                       <img src="https://i.imgur.com/9D7IIFU.png" alt="">
                     </div>
-                    <div class="col-sm-4 col-md-3 col-lg-2">
+                    <div class="col-sm-4 col-md-3 col-lg-2 mt-2">
                       <label class="radio">
                         <input type="radio" name="radio_model" value=3 /><i></i>孫中山
                       </label>
                       <img src="https://i.imgur.com/5GgSWlw.png" alt="">
                     </div>
-                    <div class="col-sm-4 col-md-3 col-lg-2">
+                    <div class="col-sm-4 col-md-3 col-lg-2 mt-2">
                       <label class="radio">
                         <input type="radio" name="radio_model" value=4 /><i></i>克勞德
                       </label>
                       <img src="https://i.imgur.com/aWt7dfk.png" alt="">
                     </div>
-                    <div class="col-sm-4 col-md-3 col-lg-2">
+                    <div class="col-sm-4 col-md-3 col-lg-2 mt-2">
                       <label class="radio">
                         <input type="radio" name="radio_model" value=5 /><i></i>艾麗絲
                       </label>
                       <img src="https://i.imgur.com/PGep2xN.png" alt="">
                     </div>
-                    <div class="col-sm-4 col-md-3 col-lg-2">
+                    <div class="col-sm-4 col-md-3 col-lg-2 mt-2">
                       <label class="radio">
-                        <input type="radio" name="radio_model" value=6 /><i></i>蒂法
+                        <input type="radio" name="radio_model" value=6 /><i></i>蒂法 &nbsp;&nbsp;&nbsp;
                       </label>
                       <img src="https://i.imgur.com/Xk6jCM6.png" alt="">
                     </div>
