add model davanci

--- a/demo.html
+++ b/demo.html
@@ -159,6 +159,12 @@
                       </label>
                       <img src="https://i.imgur.com/Xk6jCM6.png" alt="">
                     </div>
+                    <div class="col-sm-4 col-md-3 col-lg-2 mt-2">
+                      <label class="radio">
+                        <input type="radio" name="radio_model" value=7 /><i></i>達文西
+                      </label>
+                      <img src="https://i.imgur.com/v910V83.png" alt="">
+                    </div>
                   </div>
                 </div>
               </section>
