refactor project and add intro pahe

--- a/demo.html
+++ b/demo.html
@@ -19,14 +19,13 @@
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <link href="//vjs.zencdn.net/7.3.0/video-js.min.css" rel="stylesheet">
   <link rel="stylesheet" href="./css/bootstrap.min.css">
-  <link rel="stylesheet" href="./css/style-white.css">
-  <link rel="stylesheet" href="./css/move-top.css">
-  <link rel="stylesheet" href="./css/loading.css">
-  <link rel="stylesheet" href="./css/survey.css">
-  <link rel="stylesheet" href="./css/videoLandmark.css">
+  <link rel="stylesheet" href="./css/demo/style-white.css">
+  <link rel="stylesheet" href="./css/demo/loading.css">
+  <link rel="stylesheet" href="./css/demo/survey.css">
+  <link rel="stylesheet" href="./css/demo/videoLandmark.css">
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="//vjs.zencdn.net/7.3.0/video.min.js"></script>
-  <link rel="stylesheet" href="./css/recorder.css">
+  <link rel="stylesheet" href="./css/demo/recorder.css">
 
 </head>
 
@@ -286,15 +285,12 @@
     <a href="#"><span></span></a>
   </p>
 
-  <script src="./js/modal.min.js"></script>
-  <script src="./js/index.js"></script>
-  <script src="./js/config.js"></script>
-  <script src="./js/recorder.js"></script>
-  <script src="./js/demo.js"></script>
-  <script src="./js/demo2.js"></script>
+  <script src="./js/demo/modal.min.js"></script>
+  <script src="./js/demo/index.js"></script>
+  <script src="./js/demo/config.js"></script>
+  <script src="./js/demo/recorder.js"></script>
+  <script src="./js/demo/demo.js"></script>
   
-
-  <!-- <script src="../js/modal.min.js"></script> -->
 </body>
 
 </html>
