add section style

--- a/intro/index.html
+++ b/intro/index.html
@@ -8,21 +8,22 @@
 	<link href="https://fonts.googleapis.com/css?family=PT+Serif:700|Roboto" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 	<link rel="stylesheet" href="/css/bootstrap.min.css">
-	<link rel="stylesheet" href="/css/intro/style.css">
+  <link rel="stylesheet" href="/css/intro/style.css">
+  <link rel="stylesheet" href="/css/intro/base-style.css">
 	<link rel="stylesheet" href="/css/intro/scroll-down.css">
 
 </head>
 
 <body>
 	<!-- Init Animation -->
-	<div class="loading-overlay d-none" id="loadingOverlay">
+	<!-- <div class="loading-overlay d-none" id="loadingOverlay">
 		<span class="loading-overlay__content h1">
 			<img src="/image/logo.png" alt="">
 		</span>
 	</div>
 	<div class="loading_mobile d-nonse" id="loadingMobile">
 		<img id="imgMobile" src="" style="width: 100%;">
-	</div>
+	</div> -->
 	<!-- partial:index.partial.html -->
 	<button class="nav-toggle" id="navToggle" data-menustate="closed">
 		<svg class="icon icon--menu" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
@@ -78,11 +79,11 @@
 			<img src="../../../image/demo/demo4.gif" class="object-fit" alt="chair">
 		</div>
 	</header>
-	<section style="background: #bd7f57;" id="section1">
+	<section class="section1">
 		<div class="p-5">
 			<div class="row justify-content-center align-items-center">
 				<div class="col-md-6">
-					<img src="https://i.imgur.com/zz1xrMU.png" style="width: 100%;height: 100%;">
+					<img src="https://i.imgur.com/zz1xrMU.png">
 				</div>
 				<div class="col-md-6">
 					<h2>AdaIN-GAN</h2>
@@ -116,16 +117,16 @@
 					multi-head attention as well as two methods of incorporating sequence position information into SANs.
 				</div>
 				<div class="col-md-6">
-					<img src="https://i.imgur.com/44E3344.png" style="width: 100%;height: 100%;">
+					<img src="https://i.imgur.com/44E3344.png">
 				</div>
 			</div>
 		</div>
 	</section>
-	<section style="height: 600px;background: #2f3238;" id="section2">
+	<section class="section2">
 		<div class="container p-5">
-			<div class="row justify-content-center align-items-center">
+			<div class="row justify-content-center align-items-center text-center">
 				<div class="col-4">
-					<img src="https://i.imgur.com/HGvzFG1.png" alt="" srcset="">
+					<img src="https://i.imgur.com/HGvzFG1.png" alt="">
 				</div>
 				<div class="col-4">
 					<img src="https://i.imgur.com/j39NCtH.png" alt="">
