--- a/intro/index.html
+++ b/intro/index.html
@@ -16,14 +16,14 @@
 
 <body>
 	<!-- Init Animation -->
-	<!-- <div class="loading-overlay d-none" id="loadingOverlay">
+	<div class="loading-overlay d-none" id="loadingOverlay">
 		<span class="loading-overlay__content h1">
 			<img src="/image/logo.png" alt="">
 		</span>
 	</div>
 	<div class="loading_mobile d-nonse" id="loadingMobile">
 		<img id="imgMobile" src="" style="width: 100%;">
-	</div> -->
+	</div>
 	<!-- partial:index.partial.html -->
 	<button class="nav-toggle" id="navToggle" data-menustate="closed">
 		<svg class="icon icon--menu" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
@@ -122,16 +122,17 @@
 			</div>
 		</div>
 	</section>
-	<section class="section2">
+	<section class="section2 text-center p-5">
+    <h2>Demo</h2>
 		<div class="container p-5">
 			<div class="row justify-content-center align-items-center text-center">
-				<div class="col-4">
+				<div class="col-4 demo1">
 					<img src="https://i.imgur.com/HGvzFG1.png" alt="">
 				</div>
-				<div class="col-4">
+				<div class="col-4 demo2">
 					<img src="https://i.imgur.com/j39NCtH.png" alt="">
 				</div>
-				<div class="col-4">
+				<div class="col-4 demo3">
 					<img src="https://i.imgur.com/9D7IIFU.png" alt="">
 				</div>
 			</div>
