modify intro animate

--- a/intro/index.html
+++ b/intro/index.html
@@ -21,7 +21,7 @@
 			<img src="/image/logo.png" alt="">
 		</span>
 	</div>
-	<div class="loading_mobile d-nonse" id="loadingMobile">
+	<div class="loading_mobile d-none" id="loadingMobile">
 		<img id="imgMobile" src="" style="width: 100%;">
 	</div>
 	<!-- partial:index.partial.html -->
@@ -79,7 +79,7 @@
 			<img src="../../../image/demo/demo4.gif" class="object-fit" alt="chair">
 		</div>
 	</header>
-	<section class="section1">
+	<section class="section1" id="section1">
 		<div class="p-5">
 			<div class="row justify-content-center align-items-center">
 				<div class="col-md-6">
