--- a/demo.html
+++ b/demo.html
@@ -44,7 +44,7 @@
       <span class="loading-text-words">.</span>
       <span class="loading-text-words">.</span>
     </div>
-    <img src="./image/face-swap.gif" class="face-animate" draggable="false">
+    <img src="./image/demo/face-swap.gif" class="face-animate" draggable="false">
   </div>
   <!-- Loading END -->
   <div class="site-container">
