modify team member layout

--- a/intro/index.html
+++ b/intro/index.html
@@ -7,23 +7,26 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=PT+Serif:700|Roboto" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 	<link rel="stylesheet" href="/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/css/intro/style.css">
-  <link rel="stylesheet" href="/css/intro/base-style.css">
+	<link rel="stylesheet" href="/css/intro/style.css">
+	<link rel="stylesheet" href="/css/intro/base-style.css">
 	<link rel="stylesheet" href="/css/intro/scroll-down.css">
+	<link rel="stylesheet" href="/css/intro/team.css">
 
 </head>
 
 <body>
 	<!-- Init Animation -->
-	<div class="loading-overlay d-none" id="loadingOverlay">
+	<!-- <div class="loading-overlay d-none" id="loadingOverlay">
 		<span class="loading-overlay__content h1">
 			<img src="/image/logo.png" alt="">
 		</span>
 	</div>
 	<div class="loading_mobile d-none" id="loadingMobile">
 		<img id="imgMobile" src="" style="width: 100%;">
-	</div>
+	</div> -->
 	<!-- partial:index.partial.html -->
 	<button class="nav-toggle" id="navToggle" data-menustate="closed">
 		<svg class="icon icon--menu" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
@@ -123,7 +126,7 @@
 		</div>
 	</section>
 	<section class="section2 text-center p-5">
-    <h2>Demo</h2>
+		<h2>Demo</h2>
 		<div class="container p-5">
 			<div class="row justify-content-center align-items-center text-center">
 				<div class="col-4 demo1">
@@ -134,6 +137,69 @@
 				</div>
 				<div class="col-4 demo3">
 					<img src="https://i.imgur.com/9D7IIFU.png" alt="">
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="section3 text-center p-5 team content-section">
+		<div class="container">
+			<h2>Our Team</h2>
+			<h3 class="caption gray">Meet the people who make awesome stuffs</h3>
+			<!-- Profile Member -->
+			<div class="row justify-content-center align-items-center text-center">
+				<!-- Member1 -->
+				<div class="col-md-4">
+					<div class="team-member">
+						<figure>
+							<img src="/material/team-member-profile-display/dist/image/profile1.png" alt="" class="img-responsive">
+							<figcaption>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae asperiores mollitia.</p>
+								<ul>
+									<li><a href=""><i class="fab fa-github fa-2x"></i></a></li>
+									<li><a href=""><i class="fab fa-linkedin fa-2x"></i></a></li>
+									<li><a href=""><i class="fab fa-facebook fa-2x"></i></a></li>
+								</ul>
+							</figcaption>
+						</figure>
+						<h4>Lauren Cox</h4>
+						<p>Creative Director</p>
+					</div>
+				</div>
+				<!-- Member2 -->
+				<div class="col-md-4">
+					<div class="team-member">
+						<figure>
+							<img src="/material/team-member-profile-display/dist/image/profile2.png" alt="" class="img-responsive">
+							<figcaption>
+								<p>Neque minima ea, a praesentium saepe nihil maxime quod esse numquam explicabo eligendi.</p>
+								<ul>
+									<li><a href=""><i class="fab fa-github fa-2x"></i></a></li>
+									<li><a href=""><i class="fab fa-linkedin fa-2x"></i></a></li>
+									<li><a href=""><i class="fab fa-facebook fa-2x"></i></a></li>
+								</ul>
+							</figcaption>
+						</figure>
+						<h4>Jessie Barnett</h4>
+						<p>UI/UX Designer</p>
+					</div>
+				</div>
+				<!-- Member3 -->
+				<div class="col-md-4">
+					<div class="team-member">
+						<figure>
+							<img src="/material/team-member-profile-display/dist/image/profile3.png" alt="" class="img-responsive">
+							<figcaption>
+								<p>Temporibus dolor, quisquam consectetur molestias, veniam voluptatum. Beatae alias omnis totam.</p>
+								<ul>
+									<li><a href=""><i class="fab fa-github fa-2x"></i></a></li>
+									<li><a href=""><i class="fab fa-linkedin fa-2x"></i></a></li>
+									<li><a href=""><i class="fab fa-facebook fa-2x"></i></a></li>
+								</ul>
+							</figcaption>
+						</figure>
+						<h4>Terry Fletcher</h4>
+						<p>Web Developer</p>
+					</div>
 				</div>
 			</div>
 		</div>
