modify profile name

--- a/intro/index.html
+++ b/intro/index.html
@@ -161,7 +161,7 @@
 								</ul>
 							</figcaption>
 						</figure>
-						<h4>Lauren Cox</h4>
+						<h4>Wang, You-Qun</h4>
 						<p>Creative Director</p>
 					</div>
 				</div>
@@ -179,7 +179,7 @@
 								</ul>
 							</figcaption>
 						</figure>
-						<h4>Jessie Barnett</h4>
+						<h4>Huang, Xian-Yao</h4>
 						<p>UI/UX Designer</p>
 					</div>
 				</div>
@@ -197,7 +197,7 @@
 								</ul>
 							</figcaption>
 						</figure>
-						<h4>Terry Fletcher</h4>
+						<h4>Tsai, Yi-Lin</h4>
 						<p>Web Developer</p>
 					</div>
 				</div>
