--- a/intro/index.html
+++ b/intro/index.html
@@ -205,6 +205,11 @@
 		</div>
 	</section>
 
+	<!-- Footer -->
+	<div id="site-footer">
+    <p class="copy">2019 © Copyright 台灣人工智慧學校 | Taiwan AI Academy </p>
+  </div>
+
 	<script src="/js/intro/checkDevice.js"></script>
 	<script src="/js/intro/index.js"></script>
 
