modify profile name

--- a/intro/index.html
+++ b/intro/index.html
@@ -179,7 +179,7 @@
 								</ul>
 							</figcaption>
 						</figure>
-						<h4>Huang, Xian-Yao</h4>
+						<h4>Huang, Sian-Yao</h4>
 						<p>UI/UX Designer</p>
 					</div>
 				</div>
