modify background img and add notice scroll

--- a/intro/index.html
+++ b/intro/index.html
@@ -48,12 +48,19 @@
 		<div class="grid-item grid-item--primary text-center">
 			<!-- <img src="https://i.imgur.com/XaU3NOw.jpg" class="object-fit" alt="chair"> -->
 			<!-- <a href="" class="logo">dfsdf</a> -->
-			<a href="#section1" class="scroll-down">
-				<div class="box">
-					<span></span>
-					<span></span>
+			
+			<div class="scroll-down">
+				<div class="text">
+					向下滑動
 				</div>
-			</a>
+				<a href="#section1" >
+					<div class="box">
+						<span></span>
+						<span></span>
+					</div>
+				</a>
+			</div>
+			
 		</div>
 		<div class="grid-item grid-item--secondary  grid-item--content">
 			<article class="article  article--align-right">
