--- a/intro/index.html
+++ b/intro/index.html
@@ -19,14 +19,14 @@
 
 <body>
 	<!-- Init Animation -->
-	<!-- <div class="loading-overlay d-none" id="loadingOverlay">
+	<div class="loading-overlay d-none" id="loadingOverlay">
 		<span class="loading-overlay__content h1">
 			<img src="/image/logo.png" alt="">
 		</span>
 	</div>
 	<div class="loading_mobile d-none" id="loadingMobile">
 		<img id="imgMobile" src="" style="width: 100%;">
-	</div> -->
+	</div>
 	<!-- partial:index.partial.html -->
 	<button class="nav-toggle" id="navToggle" data-menustate="closed">
 		<svg class="icon icon--menu" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
