modify demo web

--- a/intro/index.html
+++ b/intro/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Furniture Store (dribbble shot by Jekin Gala)</title>
+	<title>讓圖片動起來</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=PT+Serif:700|Roboto" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
@@ -64,12 +64,12 @@
 		</div>
 		<div class="grid-item grid-item--secondary  grid-item--content">
 			<article class="article  article--align-right">
-				<h5 class="rotate rotate--right">Made in<br />Sweden</h5>
+				<h5 class="rotate rotate--right">Talking <br />Head</h5>
 			</article>
 			<article class="article">
-				<h4><span>1992</span> <span>2018</span></h4>
+				<h4><span>南部分校</span> <span>場域專案</span></h4>
 				<h2>讓圖片動起來吧!</h2>
-				<p>Within the different collections of various creative fields and directions from furniture.</p>
+				<p>透過訓練一個Meta Learner，可以在相對極短的時間內針對少量樣本的臉部五官和圖片風格去做finetune，達成讓畫像動起來的驚人效果。</p>
 			</article>
 		</div>
 		<div class="grid-item grid-item--secondary">
@@ -81,7 +81,7 @@
 		</div>
 		<div class="grid-item grid-item--tertiary grid-item--content">
 			<article class="article">
-				<p>Be the first to recieve our latest publication <a href="#">Subscribe</a></p>
+				<p>什麼？ 哈利波特魔法世界內的情節真實上演了！</p>
 			</article>
 		</div>
 		<div class="grid-item grid-item--tertiary">
